# esef

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/esef/: __init__.py  esef.py
